@@ -1282,31 +1282,31 @@
     <p>
       <strong><em>Settings file entries:</em></strong></p>
     <br>
-        <em>LowDoseParameters</em>:
+        <a name="LDparams"></a><em>LowDoseParameters</em>:
       <br /> There are three sets of parameters, for TEM, EFTEM, and STEM.
       <br />
-&nbsp;&nbsp; low dose set number 0 to 4 for V F T R S, or negative of state number
+&nbsp;&nbsp;1. low dose set number 0 to 4 for V F T R S, or negative of state number
       (numbered from 1)<br />
-&nbsp;&nbsp; mag index or negative of camera length index<br />
-&nbsp;&nbsp; spot size<br />
-&nbsp;&nbsp; intensity<br />
-&nbsp;&nbsp; axis offset in microns<br />
-&nbsp;&nbsp; 0-2 for regular/EFTEM/STEM or 0 for state<br />
-&nbsp;&nbsp; filter slit in<br />
-&nbsp;&nbsp; filter slit width<br />
-&nbsp;&nbsp; energy loss<br />
-&nbsp;&nbsp; zero loss flag<br />
-&nbsp;&nbsp; beam X offset<br />
-&nbsp;&nbsp; beam Y offset<br />
-&nbsp;&nbsp; alpha on JEOL, -999 otherwise<br />
-&nbsp;&nbsp; diffraction focus<br />
-&nbsp;&nbsp; beam tilt X<br />
-&nbsp;&nbsp; beam tilt Y<br />
-&nbsp;&nbsp; probe mode<br />
-&nbsp;&nbsp; dark field mode flag<br />
-&nbsp;&nbsp; dark field tilt X<br>
-&nbsp;&nbsp; dark field tilt Y<br>
-&nbsp;&nbsp; dose modulation percent (attenuation)</p>
+&nbsp;&nbsp;2. mag index or negative of camera length index<br />
+&nbsp;&nbsp;3. spot size<br />
+&nbsp;&nbsp;4. intensity<br />
+&nbsp;&nbsp;5. axis offset in microns<br />
+&nbsp;&nbsp;6. 0-2 for regular/EFTEM/STEM or 0 for state<br />
+&nbsp;&nbsp;7. filter slit in<br />
+&nbsp;&nbsp;8. filter slit width<br />
+&nbsp;&nbsp;9. energy loss<br />
+&nbsp;&nbsp;10. zero loss flag<br />
+&nbsp;&nbsp;11. beam X offset<br />
+&nbsp;&nbsp;12. beam Y offset<br />
+&nbsp;&nbsp;13. alpha on JEOL, -999 otherwise<br />
+&nbsp;&nbsp;14. diffraction focus<br />
+&nbsp;&nbsp;15. beam tilt X<br />
+&nbsp;&nbsp;16. beam tilt Y<br />
+&nbsp;&nbsp;17. probe mode<br />
+&nbsp;&nbsp;18. dark field mode flag<br />
+&nbsp;&nbsp;19. dark field tilt X<br>
+&nbsp;&nbsp;20. dark field tilt Y<br>
+&nbsp;&nbsp;21. dose modulation percent (attenuation)</p>
       <p>
           <em>StateParameters</em>:<br />
 &nbsp;&nbsp; 0 for non-low dose, -area # - 1 for low dose, 1 for old LD Record<br />
