@@ -4508,6 +4508,14 @@
                the current Low Dose area.</TD>
         </TR>
         <TR>
+          <TD class="scriptcommand">GetLowDoseAreaParams area var</TD>
+          <TD>Sets variable <b>var</b> with an array of the parameters for the low dose area 
+            specified by <b>area</b>.&nbsp; The indexes of each item, numbered from one, are listed
+             in <a href = "about_formats.htm#LDparams"><i>Low Dose Parameters</i></a>&nbsp; 
+            Command added in 4.3, 26-Nov-25.
+          </TD>
+        </TR>
+        <TR>
           <TD class="scriptcommand">ReportAxisPosition area</TD>
           <TD>Reports the axis position in microns and the rotation of the inter-area axis,
             for the given <b>area</b>: F (Focus) or T (Trial).&nbsp;The offset from center
