@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/26/25: Added script command to get all parameters for a low dose area into
+an array variable.
+
 11/25/25: Added ability to show STEM channels in multiple, separate windows to
 the right of the main window, similar to the side-by-side FFT display.  This
 is controlled from a dialog opened from the Window menu.
